--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "axios-https-proxy-fix": "^0.17.1",
     "element-plus": "^2.8.4",
+    "https-proxy-agent": "^7.0.5",
     "vue": "^3.4.29"
   },
   "devDependencies": {
