--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "axios": "^1.7.7",
     "axios-https-proxy-fix": "^0.17.1",
     "element-plus": "^2.8.4",
